New theme uilite - 2 first Posts finished

--- a/content/posts/2018-01-29-mi-bilbostack-2018.md
+++ b/content/posts/2018-01-29-mi-bilbostack-2018.md
@@ -2,9 +2,9 @@
 author: aitor
 date: 2018-01-29 11:15:39+00:00
 draft: false
-title: "\n\t\t\t\tBilbostack 2018\t\t"
+title: "Bilbostack 2018"
 type: post
-url: /2018/01/mi-bilbostack-2018/
+url: /blog/2018/01/mi-bilbostack-2018/
 categories:
 - clean code
 - desarrollo
