--- a/content/posts/2018-01-29-mi-bilbostack-2018.md
+++ b/content/posts/2018-01-29-mi-bilbostack-2018.md
@@ -4,6 +4,8 @@ date: 2018-01-29 11:15:39+00:00
 draft: false
 title: "Bilbostack 2018"
 type: post
+featured_image: "/images/BILBOSTACK-2018.jpg"
+featured_image_caption: "Bilbostack 2018"
 url: /blog/2018/01/mi-bilbostack-2018/
 categories:
 - clean code
@@ -23,8 +25,8 @@ En general, el sentimiento de la gente con la que me rodeé y el mío es que el 
 
 El nuevo espacio, El Palacio Euskalduna, fue todo un acierto. El contenido de las charlas que divulgaron los ponentes me dejó un buen sabor de boca, se notaba la experiencia en la palabras y los slides que mostraban.
 
-[caption id="attachment_122" align="aligncenter" width="640"]![Presentación Bilbostack 2018](/images/39950128721_803ce65a70_z.jpg)
-Presentación Bilbostack 2018[/caption]
+![Presentación Bilbostack 2018](/images/39950128721_803ce65a70_z.jpg)
+<p class="image-caption">Presentación Bilbostack 2018</p>
 
 Voy a contar mi experiencia en las diferentes charlas a las que asistí:
 
@@ -36,8 +38,8 @@ Carmen nos animó a quitar el miedo al Canvas, sobretodo a diseñadores pero tam
 
 Fue de más básico a más complicado mostrando a lo último unos ejemplos que dejan la boca abierta. Nos mostró las bondades de algunos frameworks de canvas como P5.js o three.js.
 
-[caption id="attachment_121" align="aligncenter" width="640"]![Con canvas y a lo loco de Carmen Ansio](/images/26119042208_87651e8af8_z.jpg)
-Con canvas y a lo loco - Carmen Ansio[/caption]
+![Con canvas y a lo loco de Carmen Ansio](/images/26119042208_87651e8af8_z.jpg)
+<p class="image-caption">Con canvas y a lo loco - Carmen Ansio</p>
 
 La presentación fue  muy dinámica, entretenida y estuvo muy bien en cuando a contenido. Si hay algo malo que destacar es que canvas no es responsive a priori, algo que es intolerable hoy en día con la multitud de dispositivo heterogéneos que hay.
 
@@ -83,8 +85,8 @@ Slides: [http://slides.com/franziskasauerwein/refactoring-mount-doom#/](http://
 
 Mario nos contó la evolución de la parte IT de PC Componentes a lo largo de sus años de historia. Claramente se nota que hablaba desde la experiencia en primera persona y que las ha pasado muy canutas. Han sabido sobreponerse y están ya en el buen camino. Lo primero es darse cuenta de nuestros fallos y debilidades, luego ponerle remedio.
 
-[caption id="attachment_118" align="aligncenter" width="640"]![Camino a producción de Mario Marin](/images/28170559979_39ecec371f_z.jpg)
-Camino a producción - Mario Marin[/caption]
+![Camino a producción de Mario Marin](/images/28170559979_39ecec371f_z.jpg)
+<p class="image-caption">Camino a producción - Mario Marin</p>
 
 Gracias por compartir con nosotros esos buenos y malos momentos. Al fin y al cabo, darse un batacazo de vez en cuando es otra manera de aprender, te cura de humildad y te enseña.
 
